fix overflow

--- a/src/shared/components/ResourceDetails/ResourceDetails.scss
+++ b/src/shared/components/ResourceDetails/ResourceDetails.scss
@@ -26,7 +26,7 @@
 
 @container (min-width: 650px) {
   .cluster-overview__details-wrapper {
-    grid-template-columns: max-content max-content;
+    grid-template-columns: fit-content(100%) max-content;
   }
 
   .cluster-overview__details-grid {
@@ -41,7 +41,7 @@
 
 @container (min-width: 900px) {
   .resource-details-container {
-    grid-template-columns: max-content max-content;
+    grid-template-columns: fit-content(100%) max-content;
     gap: 0;
 
     &.column-view {
